--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -18,6 +18,7 @@
     text-align: left;
     line-height: 16px;
     font-size: 12px;
+    cursor: pointer;
 
     .cornerMark {
       position: absolute;
